Refactor HTML structure and improve responsiveness across multiple pages; update footer credits to reflect developer's name; enhance mobile menu functionality with scroll prevention and click outside to close feature; implement lazy loading for images and add window resize handling for better user experience.

--- a/pages/about.html
+++ b/pages/about.html
@@ -310,7 +310,7 @@
                         <a href="#" class="hover:text-blue-400 transition">Privacy Policy</a>
                         <a href="#" class="hover:text-blue-400 transition">Terms & Conditions</a>
                     </div>
-                    <p class="text-right md:text-right">Made with <i class="fas fa-heart text-red-500"></i> for adventure seekers</p>
+                    <p class="text-right md:text-right">Developed by Sabaat Tungekar</p>
                 </div>
             </div>
         </div>
