--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
-<ht                <div class="hidden md:flex space-x-8">
-                    <a href="../index.html" class="text-gray-800 hover:text-blue-600 font-medium transition">Home</a>
-                    <a href="about.html" class="text-gray-800 hover:text-blue-600 font-medium transition">About</a>
-                    <a href="services.html" class="text-gray-800 hover:text-blue-600 font-medium transition">Services</a>
-                    <a href="gallery.html" class="text-gray-800 hover:text-blue-600 font-medium transition">Gallery</a>
-                    <a href="contact.html" class="text-gray-800 hover:text-blue-600 font-medium transition text-blue-600">Contact</a>
-                </div>"en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -310,7 +304,7 @@
                         <a href="#" class="hover:text-blue-400 transition">Privacy Policy</a>
                         <a href="#" class="hover:text-blue-400 transition">Terms & Conditions</a>
                     </div>
-                    <p class="text-right md:text-right">Made with <i class="fas fa-heart text-red-500"></i> for adventure seekers</p>
+                    <p class="text-right md:text-right">Developed by Sabaat Tungekar</p>
                 </div>
             </div>
         </div>
