--- a/pages/services.html
+++ b/pages/services.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" c                    <img src="../images/kayaking.png" alt="Kayaking" class="w-full h-full object-cover">
-                </div>
-                <div class="p-8 flex flex-col justify-center order-first md:order-last">ent="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - Karde Beach Water Sports</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -427,7 +425,7 @@
                         <a href="#" class="hover:text-blue-400 transition">Privacy Policy</a>
                         <a href="#" class="hover:text-blue-400 transition">Terms & Conditions</a>
                     </div>
-                    <p class="text-right md:text-right">Made with <i class="fas fa-heart text-red-500"></i> for adventure seekers</p>
+                    <p class="text-right md:text-right">Developed by Sabaat Tungekar</p>
                 </div>
             </div>
         </div>
