--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-2 sm:py-0">
             <div class="flex justify-between items-center h-14 sm:h-16">
                 <!-- Logo -->
-                <div class="flex items-center space-x-1 sm:space-x-2 min-w-0 flex-shrink">
+                <div class="flex items-center space-x-2 sm:space-x-2 min-w-0 flex-shrink">
                     <img src="images/logo.png" alt="KAS Logo" class="h-8 sm:h-10 w-auto flex-shrink-0">
-                    <span class="text-xs sm:text-lg sm:text-xl font-bold text-gray-800 whitespace-nowrap overflow-hidden text-overflow-ellipsis">Karde Beach</span>
+                    <span class="text-sm sm:text-lg lg:text-xl font-bold text-gray-800 whitespace-nowrap overflow-hidden text-overflow-ellipsis">Karde Beach</span>
                 </div>
                 
                 <!-- Desktop Menu -->
