Remove redundant phrase from hero section description for clarity and conciseness

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 Experience Thrill at Karde Beach
             </h1>
             <p class="text-sm sm:text-base md:text-xl lg:text-2xl mb-6 sm:mb-8 text-blue-100 drop-shadow">
-                Discover the ultimate water sports adventure with certified trainers and unforgettable memories
+                Discover the ultimate water sports adventure with unforgettable memories
             </p>
             <div class="flex flex-col sm:flex-row gap-3 sm:gap-4 justify-center">
                 
