--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -46,31 +46,13 @@
     <!-- Page Header -->
     <section class="mt-16 bg-gradient-to-r from-blue-600 to-cyan-500 text-white py-20">
         <div class="max-w-7xl mx-auto px-4 text-center">
-            <h1 class="text-5xl font-bold mb-4">Photo & Video Gallery</h1>
+          <!--   <h1 class="text-5xl font-bold mb-4">Photo & Video Gallery</h1> -->
             <p class="text-xl text-blue-100">Explore stunning moments from our amazing adventures</p>
         </div>
     </section>
 
     <!-- Gallery Content -->
     <main class="max-w-7xl mx-auto px-4 py-20">
-        <!-- Filter Buttons -->
-        <div class="mb-12 flex justify-center flex-wrap gap-4">
-            <button class="filter-btn bg-blue-600 text-white px-6 py-2 rounded-lg font-semibold hover:bg-blue-700 transition" data-filter="all">
-                All
-            </button>
-            <button class="filter-btn bg-white border-2 border-blue-600 text-blue-600 px-6 py-2 rounded-lg font-semibold hover:bg-blue-50 transition" data-filter="jet-ski">
-                Jet Ski
-            </button>
-            <button class="filter-btn bg-white border-2 border-blue-600 text-blue-600 px-6 py-2 rounded-lg font-semibold hover:bg-blue-50 transition" data-filter="kayaking">
-                Kayaking
-            </button>
-            <button class="filter-btn bg-white border-2 border-blue-600 text-blue-600 px-6 py-2 rounded-lg font-semibold hover:bg-blue-50 transition" data-filter="banana-rides">
-                Banana Rides
-            </button>
-            <button class="filter-btn bg-white border-2 border-blue-600 text-blue-600 px-6 py-2 rounded-lg font-semibold hover:bg-blue-50 transition" data-filter="group-activities">
-                Group Activities
-            </button>
-        </div>
 
         <!-- Gallery Grid -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-20">
@@ -201,71 +183,6 @@
             </div>
         </div>
 
-        <!-- Video Section -->
-        <section class="mb-20">
-            <h2 class="text-4xl font-bold text-center mb-12">Adventure Videos</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <!-- Video 1 -->
-                <div class="relative group rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition h-96 bg-gray-800">
-                    <div class="w-full h-full flex items-center justify-center bg-gray-900">
-                        <div class="text-center">
-                            <i class="fas fa-play-circle text-white text-8xl mb-4 group-hover:scale-110 transition"></i>
-                            <p class="text-white font-bold text-lg mt-4">Speed Boat Thrills</p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Video 2 -->
-                <div class="relative group rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition h-96 bg-gray-800">
-                    <div class="w-full h-full flex items-center justify-center bg-gray-900">
-                        <div class="text-center">
-                            <i class="fas fa-play-circle text-white text-8xl mb-4 group-hover:scale-110 transition"></i>
-                            <p class="text-white font-bold text-lg mt-4">Banana & Sofa Rides</p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Video 3 -->
-                <div class="relative group rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition h-96 bg-gray-800">
-                    <div class="w-full h-full flex items-center justify-center bg-gray-900">
-                        <div class="text-center">
-                            <i class="fas fa-play-circle text-white text-8xl mb-4 group-hover:scale-110 transition"></i>
-                            <p class="text-white font-bold text-lg mt-4">Kayaking & Water Sports</p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Video 4 -->
-                <div class="relative group rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition h-96 bg-gray-800">
-                    <div class="w-full h-full flex items-center justify-center bg-gray-900">
-                        <div class="text-center">
-                            <i class="fas fa-play-circle text-white text-8xl mb-4 group-hover:scale-110 transition"></i>
-                            <p class="text-white font-bold text-lg mt-4">Customer Adventures</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Share Section -->
-        <section class="bg-blue-50 rounded-xl p-12 text-center">
-            <h2 class="text-3xl font-bold mb-4 text-gray-800">Share Your Adventure</h2>
-            <p class="text-gray-600 mb-8 text-lg">Tag us on social media to have your photos featured in our gallery!</p>
-            <div class="flex justify-center flex-wrap gap-4">
-                <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-bold hover:bg-blue-700 transition">
-                    <i class="fab fa-facebook mr-2"></i> Facebook
-                </a>
-                <a href="#" class="bg-pink-600 text-white px-6 py-3 rounded-lg font-bold hover:bg-pink-700 transition">
-                    <i class="fab fa-instagram mr-2"></i> Instagram
-                </a>
-                <a href="#" class="bg-blue-400 text-white px-6 py-3 rounded-lg font-bold hover:bg-blue-500 transition">
-                    <i class="fab fa-twitter mr-2"></i> Twitter
-                </a>
-                <a href="https://wa.me/919876543210" class="bg-green-600 text-white px-6 py-3 rounded-lg font-bold hover:bg-green-700 transition">
-                    <i class="fab fa-whatsapp mr-2"></i> WhatsApp
-                </a>
-            </div>
-        </section>
     </main>
 
     <!-- Footer -->
